--- a/src/css/style.css
+++ b/src/css/style.css
@@ -53,10 +53,14 @@ ul li
     width: 100%;
     margin-bottom:3px;
 }
-.top ul li ul li:hover,.top .selected
+.top ul li ul li:hover,.top .selected,#menu .selected
 {
     background: #555;
     cursor:default;
+}
+#menu .selected
+{
+    border: solid 1px #bbb;
 }
 .top ul li ul li span
 {
@@ -71,7 +75,7 @@ ul li
 {
     height:36px;
 }
-#menu button
+#menu button,#menu-timeline button
 {
     border:solid 1px transparent;
     background: none;
@@ -80,12 +84,12 @@ ul li
     padding: 0px 10px 0px 10px;
     margin: 3px 0px 3px 4px;
 }
-#menu button:hover
+#menu button:hover,#menu-timeline button:hover
 {
     border: solid 1px #bbb;
     cursor: pointer;
 }
-#menu button:focus
+#menu button:focus,#menu-timeline button:focus
 {
     outline:none;
 }
@@ -99,6 +103,134 @@ ul li
 #timeline
 {
     height:35%;
+}
+#menu-timeline
+{
+    text-align: right;
+    width: 102%;
+    display: block;
+    position: relative;
+    padding: 0 20px 0 0;
+    /* margin-left: 10px; */
+    height: 50px;
+}
+#menu-timeline button
+{
+    margin: 5px 0 0 0;
+    padding: 0 10px;
+    height: 32px;
+}
+#timeline-control
+{
+    display: block;
+    padding: 4% 0 0 45px;
+    width: 100%;
+    height: 100%;
+    background: #555;
+}
+#timeline-control .circle
+{
+    border: solid 1px rgb(0, 79, 116);
+    background: rgb(10, 128, 196);
+    border-radius: 50%;
+    width: 7%;
+    padding: 17px 5px 5px 13px;
+    height: 8%;
+    padding-top: 6%;
+    color: white;
+    font-size: 15px;
+    transition: box-shadow .3s ease-in-out;
+}
+#timeline-control .circle:hover
+{
+    box-shadow: 0 0 10px #bbb;
+    cursor: pointer;
+}
+#timeline-control .circle:hover > .info-circle
+{
+    opacity: 1;
+    z-index:4;
+}
+#timeline-control .circle.selected
+{
+    border: solid 1px rgb(116, 70, 0);
+    background: rgb(196, 131, 10);    
+}
+#timeline-control .circle .info-circle
+{
+    position: absolute;
+    opacity: 0;
+    top: 67%;
+    font-size: 11px;
+    text-align: center;
+    background: #555;
+    padding: 5px 10px;
+    width: 124px;
+    margin-left: -50px;
+    transition: opacity .8s ease-in-out;
+    border: solid 1px #333;
+}
+.info-circle::after
+{
+    display: block;
+    content: "";
+    border-top: solid 20px #333;
+    border-left: solid 20px transparent;
+    border-right: solid 20px transparent;
+    width: 40px;
+    height: 15px;
+    margin-left: 29px;
+    margin-top: 6px;
+    position: absolute;
+    background: #555;
+}
+#timeline-option
+{
+    position: absolute;
+    z-index: 2;
+    color: white;
+}
+#timeline-option span
+{
+    height: 33px;
+    padding-top: 12px;
+    padding-left: 15px;
+    padding-right: 9px;
+    display: inline-block;
+    font-size: 14px
+}
+#timeline-option input
+{
+    border: solid 4px transparent;
+    border-radius: 5px;
+    transition: border .4s ease-in-out;
+    width: 45px;
+}
+#timeline-option input:focus
+{
+    outline: none;
+    border:solid 4px rgb(10, 128, 196);;
+}
+#inspector
+{
+    color: white;
+    border-top: solid 1px #222;
+    border-left: solid 1px #222;
+    border-bottom: solid 1px #222;
+    overflow-y: scroll;
+    overflow-x: hidden;
+}
+#inspector::-webkit-scrollbar
+{
+    background: #262b30;
+}
+#inspector::-webkit-scrollbar-track
+{
+    background: #555;
+}
+#inspector::-webkit-scrollbar-thumb
+{
+    background: #262b30;
 }
 .back-black
 {
