--- a/src/css/style.css
+++ b/src/css/style.css
@@ -84,12 +84,12 @@ ul li
     padding: 0px 10px 0px 10px;
     margin: 3px 0px 3px 4px;
 }
-#menu button:hover,#menu-timeline button:hover
+#menu button:hover,#menu-timeline button:hover,#inspector .elemento .smallbtn:hover
 {
     border: solid 1px #bbb;
     cursor: pointer;
 }
-#menu button:focus,#menu-timeline button:focus
+#menu button:focus,#menu-timeline button:focus,#inspector .elemento .smallbtn:focus
 {
     outline:none;
 }
@@ -133,7 +133,7 @@ ul li
     border: solid 1px rgb(0, 79, 116);
     background: rgb(10, 128, 196);
     border-radius: 50%;
-    width: 7%;
+    width: 6.7%;
     padding: 17px 5px 5px 13px;
     height: 8%;
     padding-top: 6%;
@@ -209,7 +209,7 @@ ul li
 #timeline-option input:focus
 {
     outline: none;
-    border:solid 4px rgb(10, 128, 196);;
+    border:solid 4px rgb(10, 128, 196);
 }
 #inspector
 {
@@ -236,3 +236,99 @@ ul li
 {
     background-color: #343a40!important;
 }
+#renderer
+{
+    padding-top: 18px;
+    overflow: auto;
+}
+.bg-opa-bl
+{
+    display:none;
+    background: black;
+    opacity: 0.4;
+    width:100%;
+    height:100%;
+    position: absolute;
+    z-index:50;
+}
+#inspector .nothing
+{
+    font-size: 14px;
+    text-align: center;
+    position: absolute;
+    top: 42%;
+    left: 8%;
+    padding: 0 20%;
+    display:none;
+}
+#inspector .elemento .nombre
+{
+    font-size: 11px;
+    display: block;
+    font-weight: bold;
+    text-align: center;
+    padding-top: 8px;
+}
+#inspector .elemento input
+{
+    display: inline-block;
+    width: 75px;
+    font-size: 11px;
+    background: transparent;
+    border: none;
+    color: white;
+    border-bottom: solid 1px lightgray;
+    margin: 2px 10px;
+    margin-top: 10px;
+    transition: border-color .4s ease-in-out;
+}
+#inspector .elemento input:focus,#inspector .elemento select:focus,#inspector .elemento input:focus+select
+{
+    outline: none;
+    border-color:rgb(10, 128, 196);
+}
+#inspector .elemento input.end
+{
+    margin-bottom: 10px;
+}
+#inspector .elemento span
+{
+    width: 34px;
+    display: inline-block;
+    text-align: right;
+    font-size: 11px;
+}
+#inspector .elemento select
+{
+    margin-left: 6px;
+    background: #343a40;
+    border: none;
+    margin-top: 10px;
+    font-size: 11px;
+    width:50%;
+    color: white;
+    border-bottom: solid 1px white;
+}
+#inspector .elemento .nombre.small
+{
+    font-size:11px;
+}
+#inspector .elemento  select.hidden
+{
+    display: block;
+    width: 33px;
+    margin-top: -20px;
+    margin-left: 118px;
+    border-color:lightgray;
+    transition: border-color .4s ease-in-out;
+}
+#inspector .elemento .smallbtn
+{
+    font-size: 11px;
+    display: inline-block;
+    color: white;
+    border: none;
+    width: 20px;
+    margin-left: -10px;
+    background: transparent;
+}  
