--- a/src/css/style.css
+++ b/src/css/style.css
@@ -160,29 +160,15 @@ ul li
 {
     position: absolute;
     opacity: 0;
-    top: 67%;
+    bottom: 71%;
     font-size: 11px;
     text-align: center;
     background: #555;
     padding: 5px 10px;
-    width: 124px;
-    margin-left: -50px;
+    width: 20%;
+    margin-left: -5%;
     transition: opacity .8s ease-in-out;
     border: solid 1px #333;
-}
-.info-circle::after
-{
-    display: block;
-    content: "";
-    border-top: solid 20px #333;
-    border-left: solid 20px transparent;
-    border-right: solid 20px transparent;
-    width: 40px;
-    height: 15px;
-    margin-left: 29px;
-    margin-top: 6px;
-    position: absolute;
-    background: #555;
 }
 #timeline-option
 {
@@ -211,7 +197,7 @@ ul li
     outline: none;
     border:solid 4px rgb(10, 128, 196);
 }
-#inspector
+#inspector,#outline
 {
     color: white;
     border-top: solid 1px #222;
@@ -220,15 +206,15 @@ ul li
     overflow-y: scroll;
     overflow-x: hidden;
 }
-#inspector::-webkit-scrollbar
+#inspector::-webkit-scrollbar,#outline::-webkit-scrollbar
 {
     background: #262b30;
 }
-#inspector::-webkit-scrollbar-track
+#inspector::-webkit-scrollbar-track,#outline::-webkit-scrollbar-track
 {
     background: #555;
 }
-#inspector::-webkit-scrollbar-thumb
+#inspector::-webkit-scrollbar-thumb,#outline::-webkit-scrollbar-thumb
 {
     background: #262b30;
 }
@@ -341,7 +327,7 @@ ul li
 #menu .right
 {
     position: absolute;
-    right: 45px;
+    right: 72px;
     margin-top: 2px;
     height: 36px;
 }
@@ -349,4 +335,59 @@ ul li
 {
     width: 100%;
     height: 100%;
+}
+.inspector_menu
+{
+    position: fixed;
+    z-index: 10;
+    font-size: 12px;
+    top: 2px;
+    right: 23px;
+}
+.inspector_menu button
+{
+    background-color: #343a40;
+    color: white;
+    padding: 3px 10px;
+    border: none;
+    outline:none;
+}
+.inspector_menu button.selected
+{
+    background: linear-gradient(to top,#505961,#343a40);
+}
+#outline ul li.selected
+{
+    background: #616161;
+    border-radius:5px;
+}
+.deleteImg
+{
+    outline: none;
+    border: none;
+    background: none;
+    color: white;
+    cursor: pointer;
+}
+@keyframes orange
+{
+    from
+    {
+
+    }
+    30%
+    {
+        background:orange;
+    }
+    50%
+    {
+        background:orange;        
+    }
+    80%
+    {
+        background-color: #343a40;
+    }
+    to
+    {      
+    }
 }
