--- a/src/css/style.css
+++ b/src/css/style.css
@@ -102,7 +102,7 @@ ul li
 }
 #timeline
 {
-    height:35%;
+    height:550px;
 }
 #menu-timeline
 {
@@ -127,19 +127,6 @@ ul li
     width: 100%;
     height: 100%;
     background: #555;
-}
-#timeline-control .circle
-{
-    border: solid 1px rgb(0, 79, 116);
-    background: rgb(10, 128, 196);
-    border-radius: 50%;
-    width: 6.7%;
-    padding: 17px 5px 5px 13px;
-    height: 8%;
-    padding-top: 6%;
-    color: white;
-    font-size: 15px;
-    transition: box-shadow .3s ease-in-out;
 }
 #timeline-control .circle:hover
 {
