--- a/src/css/style.css
+++ b/src/css/style.css
@@ -207,6 +207,22 @@ ul li
 {
     background: #262b30;
 }
+#renderer::-webkit-scrollbar
+{
+    background: #343a40;
+}
+#renderer::-webkit-scrollbar-thumb
+{
+    background: #464646;
+}
+#renderer::-webkit-scrollbar-track
+{
+    background: #505961;
+}
+#renderer::-webkit-scrollbar-corner
+{
+    background: #343a40;
+}
 .back-black
 {
     background-color: #343a40!important;
@@ -330,8 +346,8 @@ ul li
 }
 #webview
 {
-    width: 100%;
-    height: 100%;
+    width: 1024px;
+    height: 320px;
     border: dashed 1px #343a40;
 }
 .inspector_menu
@@ -430,6 +446,16 @@ ul li
 {
     border:solid 1px lightgray;
     cursor: pointer;
+}
+#resolucion
+{
+    margin: 8px 10px;
+    font-size: 11px;
+    background: #343a40;
+    color: white;
+    padding: 1px 5px;
+	border: solid 1px #717171;
+	border-radius: 5px;
 }
 @keyframes orange
 {
