--- a/src/css/option.css
+++ b/src/css/option.css
@@ -1,35 +1,87 @@
-body
+html,body
 {
 	background: #333;
 	margin:0;
 	color:white;
 	font-family: 'Open Sans';
 	overflow: hidden;
+	font-size: 14px;
+	height:100%;
+} 
+h1
+{
+	font-family: 'Montserrat';
+	display:block;
+	text-align: center;
+	font-size: 16px;
+	background: rgb(32, 32, 32);
+	padding:18px;
+	position: relative;
+	z-index:4;
+}
+h3
+{
+	font-family: 'Montserrat';
+	font-size: 15px;
 }
 .Options
 {
-	width:105%;
+	width:108%;
 }
 .BasicTab,.AdvancedTab
 {
+	position: relative;
+	top:-16px;
 	display:inline-block;
-	width:49%;
-	margin-left: -4px;
+	width:48%;
+	background: rgb(71, 71, 71);
+	padding:1%;
+	margin-left: -14px;
+	border-right:solid 1px transparent;
 	text-align: center;
-	border-right: solid 1px rgb(224, 220, 220);
 	transition: box-shadow .2s ease-in-out,border-color .2s ease-in-out;
 	border-bottom: solid 1px rgb(224, 220, 220);
 }
-.selected
+.BasicTab.selected,.AdvancedTab.selected
 {
+	background: rgb(32, 32, 32);
 	border-bottom: solid 1px rgb(47, 134, 168);
-	box-shadow:0px -1px 3px rgb(47, 134, 168);
+	box-shadow: inset -4px 0px 8px rgb(47, 134, 168);
 }
 .BasicContainer,.AdvancedContainer
 {
-	text-align: center;
+	text-align: justify;
+	padding: 10px 15px;
 }
 .AdvancedContainer
 {
 	display:none;
+}
+.sidebarElm
+{
+	float:left;
+	margin-top:-15px;
+	padding:20px 0 20px 0px;
+	margin-right: 10px;
+	background: rgb(71, 71, 71);
+	height:100%;
+}
+.sidebarElm div
+{
+	border-top:solid 1px rgba(224, 220, 220,0.1);
+	border-bottom:solid 1px rgba(224, 220, 220,0.1);
+	border-left: solid 4px transparent;
+	padding:10px 25px 10px 25px;
+	margin-top:-1px;
+	transition: background .2s ease-in-out;
+}
+.sidebarElm div:hover
+{
+	cursor: pointer;
+	background: rgb(51, 51, 51);
+}
+.sidebarElm div.selected
+{
+	background: rgb(51, 51, 51);
+	border-left-color: rgb(47, 134, 168);
 }
