--- a/src/css/option.css
+++ b/src/css/option.css
@@ -1,6 +1,6 @@
 html,body
 {
-	background: #333;
+	background: #343a40;
 	margin:0;
 	color:white;
 	font-family: 'Open Sans';
@@ -12,17 +12,20 @@ h1
 {
 	font-family: 'Montserrat';
 	display:block;
+	width:92%;
 	text-align: center;
 	font-size: 16px;
-	background: rgb(32, 32, 32);
+	background: #292e33;
 	padding:18px;
 	position: relative;
 	z-index:4;
 }
 h3
 {
-	font-family: 'Montserrat';
-	font-size: 15px;
+    font-family: 'Montserrat';
+    font-size: 15px;
+    margin-left: 160px;
+    display: inline-block;
 }
 .Options
 {
@@ -34,7 +37,8 @@ h3
 	top:-16px;
 	display:inline-block;
 	width:48%;
-	background: rgb(71, 71, 71);
+	height:20px;
+	background: #4a515a;
 	padding:1%;
 	margin-left: -14px;
 	border-right:solid 1px transparent;
@@ -44,9 +48,9 @@ h3
 }
 .BasicTab.selected,.AdvancedTab.selected
 {
-	background: rgb(32, 32, 32);
+	background: #292e33;
 	border-bottom: solid 1px rgb(47, 134, 168);
-	box-shadow: inset -4px 0px 8px rgb(47, 134, 168);
+	box-shadow: inset -4px 0px 6px rgb(47, 134, 168);
 }
 .BasicContainer,.AdvancedContainer
 {
@@ -63,7 +67,7 @@ h3
 	margin-top:-15px;
 	padding:20px 0 20px 0px;
 	margin-right: 10px;
-	background: rgb(71, 71, 71);
+	background: #4a515a;
 	height:100%;
 }
 .sidebarElm div
@@ -73,15 +77,115 @@ h3
 	border-left: solid 4px transparent;
 	padding:10px 25px 10px 25px;
 	margin-top:-1px;
-	transition: background .2s ease-in-out;
+	transition: background .2s ease-in-out, border-color .2s ease-in-out;
 }
 .sidebarElm div:hover
 {
 	cursor: pointer;
-	background: rgb(51, 51, 51);
+	background: #31363b;
 }
 .sidebarElm div.selected
 {
-	background: rgb(51, 51, 51);
+	background: #31363b;
 	border-left-color: rgb(47, 134, 168);
+}
+.singleOption
+{
+	padding:10px 15px;
+}
+.singleOption span
+{
+	width:150px;
+	display:inline-block;
+	text-align: right;
+}
+.singleOption input[type=number],.singleOption select
+{
+	margin-left: 15px; 
+	padding: 10px 5px;
+	border:none;
+	border-bottom: solid 1px lightgray;
+	background: #343a40;
+	color:white;
+	outline:none;
+	transition: border-color .3s ease-in-out;
+}
+.singleOption input[disabled]
+{
+	border-color:rgb(114, 114, 114);
+}
+.singleOption input[type=number]:focus,.singleOption select:focus
+{
+	border-color:rgb(47, 134, 168);
+}
+.singleOption input[type=checkbox]
+{
+	-webkit-appearance: none;
+	background: #4a515a;
+	border:solid 1px #292e33;
+	border-radius:5px;
+	vertical-align: middle;
+	margin-right:10px;
+	width:16px;
+	height:16px;
+	outline:none;
+	transition: all .3s ease-in-out;
+}
+.singleOption input[type=checkbox]:checked
+{
+	background: #31363b;
+}
+.singleOption input[type=checkbox]:checked::after
+{
+	font-family: "FontAwesome";
+	font-size:"14px";
+	content:"\f00c";
+	color:white;
+}
+.singleOption #guardar
+{
+	padding:5px 10px;
+	border:solid 1px rgb(114, 114, 114);
+	background-color: #343a40;
+	color:white;
+	font-family: "Open Sans";
+	transition: border .4s ease-in-out,box-shadow .4s ease-in-out;
+	border-radius:10px;
+	outline:solid 3px transparent;
+	right: 50px;
+    position: absolute;
+    padding: 10px 45px;
+}
+.singleOption button:hover
+{
+	border-color:rgb(10, 128, 196);
+	cursor: pointer;
+	box-shadow: 0 0 10px rgb(10, 128, 196);
+}
+.uninteract
+{
+	pointer-events: none;
+}
+#general label
+{
+	font-size: 10px;
+    padding: 5px 15px;
+    border-radius: 10px;
+    border: solid 1px #4f5a65;
+}
+#general select
+{
+	min-width: 85px;
+	margin-right:10px;
+}
+#general button
+{
+	padding:5px 10px;
+	border:solid 1px rgb(114, 114, 114);
+	background-color: #343a40;
+	color:white;
+	font-family: "Open Sans";
+	transition: border .4s ease-in-out,box-shadow .4s ease-in-out;
+	border-radius:10px;
+	outline:solid 3px transparent;
 }
