--- a/src/css/style.css
+++ b/src/css/style.css
@@ -230,7 +230,10 @@ ul li
 #renderer
 {
     padding-top: 18px;
-    overflow: auto;
+	overflow: auto;
+	background-color: #fff;
+	background-size: 45px 45px;
+    background-image: linear-gradient(to right, #dee 1px, transparent 1px);
 }
 .bg-opa-bl
 {
