--- a/src/css/style.css
+++ b/src/css/style.css
@@ -233,7 +233,7 @@ ul li
 	overflow: auto;
 	background-color: #fff;
 	background-size: 45px 45px;
-    background-image: linear-gradient(to right, #dee 1px, transparent 1px);
+    background-image: linear-gradient(to right, #ddd 1px, transparent 1px);
 }
 .bg-opa-bl
 {
