--- a/TimelineAnimation/css/style.css
+++ b/TimelineAnimation/css/style.css
@@ -119,12 +119,39 @@ body
 #slidescrollcontain
 {
 	height: 76%;
+	position: relative;
 }
 #currentTime
 {
     position: absolute;
     color: #888;
-    margin-top: 14px;
-    margin-left: -25px;
-    font-size: 12px;
+    margin-left: 50%;
+    margin-top: 2px;
+    background: #343a40;
+    padding: 1px 10px;
+    font-size: 14px;
+    z-index: 25;
+}
+#slide-tracker::before
+{
+    content: "";
+    display: inline-block;
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+    margin-left: -7px;
+    border-top: solid 1px #3a3a3a;
+    border-left: solid 1px #3a3a3a;
+    border-right: solid 1px #3a3a3a;
+	background-color: #eee;
+	cursor:move;
+}
+#slide-tracker
+{
+	width:2px;
+	height:100%;
+	background-color: #eee;
+	position: absolute;
+	left:10px;
+	border:solid 1px #555;
 }
