--- a/TimelineAnimation/css/style.css
+++ b/TimelineAnimation/css/style.css
@@ -70,7 +70,8 @@ body
 #timespan .sec
 {
     color: #888;
-    font-size: 12px;
+	font-size: 12px;
+	position: absolute;
     margin-left: -6px;
     display: inline-block;
     margin-top: 21px;
